@@ -1,6 +1,7 @@
 package com.nishtha.PrivateRepoReadMeGen.service;
 
 import com.nishtha.PrivateRepoReadMeGen.DTOs.RepoDTO;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpEntity;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
@@ -9,43 +10,60 @@ import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class GitHubService {
 
-    private final RestTemplate restTemplate = new RestTemplate();
+    private final RestTemplate rest = new RestTemplate();
 
-    public List<RepoDTO> listRepos(OAuth2AuthorizedClient client) {
-        String url = "https://api.github.com/user/repos?per_page=100";
+    public List<RepoDTO> getRepos(OAuth2AuthorizedClient client) {
+
         HttpHeaders headers = new HttpHeaders();
         headers.setBearerAuth(client.getAccessToken().getTokenValue());
-        HttpEntity<Void> request = new HttpEntity<>(headers);
 
-        ResponseEntity<List> response = restTemplate.exchange(url, HttpMethod.GET, request, List.class);
+        HttpEntity<?> entity = new HttpEntity<>(headers);
 
-        List<Map<String, Object>> rawRepos = response.getBody();
+        ResponseEntity<List<Map<String, Object>>> response =
+                rest.exchange(
+                        "https://api.github.com/user/repos",
+                        HttpMethod.GET,
+                        entity,
+                        new ParameterizedTypeReference<>() {}
+                );
 
-        return rawRepos.stream()
-                .map(repo -> new RepoDTO(
+        return response.getBody().stream().map(repo ->
+                new RepoDTO(
                         (String) repo.get("name"),
-                        (String) repo.get("full_name"),
-                        (String) repo.get("description"),
-                        (Boolean) repo.get("private")
-                ))
-                .collect(Collectors.toList());
+                        (String) repo.get("full_name")
+                )
+        ).toList();
     }
 
-    public String getRepoReadme(OAuth2AuthorizedClient client, String username, String repo) {
-        String url = "https://api.github.com/repos/" + username + "/" + repo + "/readme";
+    public String getRepoReadme(OAuth2AuthorizedClient client, String owner, String repo) {
+
+        String url = "https://api.github.com/repos/" + owner + "/" + repo + "/readme";
+
         HttpHeaders headers = new HttpHeaders();
         headers.setBearerAuth(client.getAccessToken().getTokenValue());
-        headers.set("Accept", "application/vnd.github.v3.raw");
-        HttpEntity<Void> request = new HttpEntity<>(headers);
 
-        ResponseEntity<String> response = restTemplate.exchange(url, HttpMethod.GET, request, String.class);
-        return response.getBody();
+        HttpEntity<?> entity = new HttpEntity<>(headers);
+
+        try {
+            ResponseEntity<Map> res = rest.exchange(
+                    url,
+                    HttpMethod.GET,
+                    entity,
+                    Map.class
+            );
+
+            String encoded = (String) res.getBody().get("content");
+            return new String(Base64.getDecoder().decode(encoded));
+
+        } catch (Exception e) {
+            return "No README found.";
+        }
     }
 }
